style.css
html {
    background-color: #1e1e1e;
    color: lightgrey;
}

body {
    margin: 0;
}

a {
    text-decoration: none;
    color: #42a5f5;
    background: inherit;
}

h1 {
    color: #00B2D4;
    margin-top: 150px;
    text-transform: capitalize;
    font-size: 400%;
}

table, th, td {
    border: 1px solid rgba(0, 187, 212, 0.8);
    border-collapse: collapse;
}

table {
    margin-left: 20%;
    margin-right: 20%;
    width: 60%;
}

table tbody:first-child {
    text-transform: capitalize;
}

.header_active {
    background-color: rgba(0, 187, 212, 0.5) !important;
}

.header {
    border-top: 5px solid rgba(0, 187, 212, 0.8);
    height: 67px;
    width: 100%;
    background-color: #3b3b3b;
    z-index: 20;
}

.header_nav {
    display: block;
    background-color: inherit;
    height: inherit;
}

.header_bars {
    margin: 0;
    padding: 0;
    list-style-type: none;
    background-color: inherit;
    height: inherit;
}

.header_bars li {
    background-color: inherit;
    list-style-type: none;
    display: inline-block;
    height: inherit;
}


.header_nav-links {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    width: 100%;
    background-color: inherit;
    height: inherit;
}

.header__nav-links-element {
    text-transform: capitalize;
    text-align: center;
    line-height: inherit;
    display: block;
    background-color: inherit;
    height: inherit;
}

.header__nav-links-element img {
    padding-top: 0;
    height: inherit;
    background-color: inherit;
    color: lightgrey;
}


.header__nav-links-element a {
    height: 35px;
    display: block;
    background-color: inherit;
    padding: 16px
}

.header__nav-links-element:hover {
    background-color: #101010;
}


.header__nav-links-element-text {
    padding-top: 20px !important;
    padding-bottom: 29px !important;
    height: 20% !important;
    text-transform: capitalize;
    text-decoration: none;
    color: white;
    font-size: 120%;
}

.content_wrapper {
    right: 50%;
    padding-top: 5%;
    position: absolute;
}

.content {
    background-color: rgba(0,0,0,0);
    z-index: 10;
    text-align: center;
    padding: 5px;
    position: relative;
    right: -50%;
}

.description {
    font-size: 120%;
    color: lightgray;
}

.pad-below {
    padding-bottom: 20px;
}

#left_header {
    float: left;
}

#right_header {
    float: right;
}

#menuToggle {
    background-color: inherit;
    overflow: hidden;
    height: 35px;
    width: 35px;
    padding: 16px;
    align-content: right;
}

#menuToggle input {
    height: 35px;
    width: 35px;
    z-index: 6;
    opacity: 0;
}
    
#menuToggle span {
    display: block;
    width: 33px;
    height: 4px;
    margin-bottom: 5px;
    position: relative;
    top: -35px;
    right: -5px;
    
    background: #cdcdcd;
    border-radius: 3px;
    
    z-index: 1;
}

#menuToggle input:checked ~ span
{
  background: #232323;
}

#burger_menu-list {
    padding-left: 0px;
    padding-right: 38px;
    list-style-type: none;
    left: 50px;
    position: absolute;
    left: calc(100% - 150px);
    top: 72px;
    background-color: #585858;
    transform-origin: 0% 0%;
    transform: translate(200%, 0);
    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
}

#burger_menu-list li {
    width: auto;
    display: block;
    padding: 8px;
}

#menuToggle input:checked ~ ul
{
    transform: none;
}

#particle_container {
    z-index: 1;
    position: relative;
}

@media only screen and (max-width: 660px) {

    #left_header ul :not(:first-child){
        display: none;
    }

    #burger_menu {
        float: right;
        height: inherit;
        display: block;
        background-color: inherit;
    }

    #right_header{
        display: none;
    }
}

@media screen and (min-width: 661px) {
    #burger_menu {
        display: none;
    }
  }

